@@ -1,4 +1,4 @@
-.\" RCSid "$Id: falsecolor.1,v 1.13 2017/09/25 18:48:11 greg Exp $"
+.\" RCSid "$Id: falsecolor.1,v 1.14 2019/08/25 22:24:01 greg Exp $"
 .TH "FALSECOLOR" "1" "12/12/11" "RADIANCE" ""
 .SH "NAME"
 falsecolor \- make a false color RADIANCE picture
@@ -123,6 +123,8 @@ option provides different color palettes for
 The current choices are
 .I spec
 for the old spectral mapping,
+.I tbo
+for the "turbo" spectral mapping,
 .I hot
 for a thermal scale,
 .I eco
